--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.0.4",
+    "primeicons": "^6.0.1",
     "primereact": "^10.3.0",
     "react": "^18",
     "react-dom": "^18"
